--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.github.imangazalievm:circlemenu:1.1.1'
     compile 'com.github.szugyi:Android-CircleMenu:2.0.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    compile 'com.alirezaafkar:sundatepicker:2.0.8'
 }
