--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.github.szugyi:Android-CircleMenu:2.0.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.alirezaafkar:sundatepicker:2.0.8'
+    compile 'com.specyci:residemenu:1.6'
 }
