sanad zadan date

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
             android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".AccountsActivity"
             android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".BillActivity"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
