--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -23,13 +23,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
-    compile 'com.github.imangazalievm:circlemenu:1.1.1'
-    compile 'com.github.szugyi:Android-CircleMenu:2.0.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.alirezaafkar:sundatepicker:2.0.8'
-    compile 'com.specyci:residemenu:1.6'
     compile 'com.pegah.backtory:backtory-android-sdk:0.5.3'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
 
 repositories {
