--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,13 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
-    compile 'com.alirezaafkar:sundatepicker:2.0.8'
-    compile 'com.pegah.backtory:backtory-android-sdk:0.5.3'
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support:design:26.+'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation 'com.alirezaafkar:sundatepicker:2.0.8'
+    implementation 'com.pegah.backtory:backtory-android-sdk:0.5.3'
+    implementation 'uk.co.chrisjenx:calligraphy:2.2.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
 
 repositories {
